--- a/local.css
+++ b/local.css
@@ -17,7 +17,7 @@
 
 body {
   padding-bottom: 40px;
-  background-color: white;
+  /*color: #5a5a5a;*/
 }
 
 
@@ -30,58 +30,13 @@ body {
 }
 
 
-
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
-
-.navbar-fixed {
-  /*position: fixed;*/
-}
-
-/* Special class on .container surrounding .navbar, used for positioning it into place. */
-.navbar-wrapper {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 10;
-  margin-top: 20px;
-  margin-bottom: -90px; /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
-}
-/*.navbar-wrapper .navbar {*/
-
-/*}*/
 
 .navbar-inner {
   line-height: normal;
   background-color: white;
 }
-/* Remove border and change up box shadow for more contrast */
-/*.navbar .navbar-inner {*/
-  /*border: 0;*/
-  /*-webkit-box-shadow: 0 2px 10px rgba(0,0,0,.25);*/
-     /*-moz-box-shadow: 0 2px 10px rgba(0,0,0,.25);*/
-          /*box-shadow: 0 2px 10px rgba(0,0,0,.25);*/
-/*}*/
-
-/* Downsize the brand/project name a bit */
-.navbar .brand {
-  padding: 14px 20px 16px; /* Increase vertical padding to match navbar links */
-  font-size: 16px;
-  font-weight: bold;
-  /*text-shadow: 0 -1px 0 rgba(0,0,0,.5);*/
-}
-
-/* Navbar links: increase padding for taller navbar */
-.navbar .nav > li > a {
-  padding: 15px 20px;
-}
-
-/* Offset the responsive button for proper vertical alignment */
-.navbar .btn-navbar {
-  margin-top: 10px;
-}
-
 
 
 /* CUSTOMIZE THE CAROUSEL
@@ -130,7 +85,7 @@ body {
   margin: 0;
   line-height: 1.25;
   color: #fff;
-  text-shadow: 1px 1px 1px black;
+  text-shadow: 0 1px 1px rgba(0,0,0,.4);
 }
 .carousel-caption .btn {
   margin-top: 10px;
@@ -139,10 +94,6 @@ body {
 .carousel-indicators {
   top: 440px;
   left: 50%;
-}
-
-.fancybox-overlay {
-  background: url(img/fancybox_overlay.png);
 }
 
 
@@ -169,27 +120,20 @@ body {
   margin: 80px 0; /* Space out the Bootstrap <hr> more */
 }
 .featurette {
-  /*padding-top: 120px; /* Vertically center images part 1: add padding above and below text. */
+  padding-top: 120px; /* Vertically center images part 1: add padding above and below text. */
   overflow: hidden; /* Vertically center images part 2: clear their floats. */
 }
 .featurette-image {
-  /*margin-top: -120px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
+  margin-top: -120px; /* Vertically center images part 3: negative margin up the image the same amount of the padding to center it. */
 }
 
 /* Give some space on the sides of the floated elements so text doesn't run right into it. */
 .featurette-image.pull-left {
-  /*margin-right: 40px;*/
+  margin-right: 40px;
 }
 .featurette-image.pull-right {
-  /*margin-left: 40px;*/
+  margin-left: 40px;
 }
-
-.featurette-background {
-  width: 100%;
-  background-repeat: no-repeat;
-  background-size: 100% 100%; 
-}
-
 
 /* Thin out the marketing headings */
 .featurette-heading {
@@ -198,32 +142,7 @@ body {
   line-height: 1;
   letter-spacing: -1px;
 }
-.featurette-heading .muted {
-  color: white;
-}
 
-.featurette-text {
-  background-color: rgba(250,250,250,.4);
-  /*text-shadow: 1px 1px 1px rgba(255,255,255,.7);*/
-  text-shadow: 1px 1px 1px rgba(0,0,0,.2);
-  width: 600px;
-  float:right;
-  padding: 10px;
-  min-height: 500px;
-}
-.featurette-text h3 {
-  font-weight: bold;
-}
-
-.featurette .lead {
-  line-height: 20px;
-}
-.featurette li {
-  margin-top: 5px;
-}
-.featurette p.lead, .featurette ul.lead {
-  font-weight: 400;
-}
 
 
 /* RESPONSIVE CSS
