--- a/local.css
+++ b/local.css
@@ -29,6 +29,8 @@ body {
   text-shadow:  #0099E6 0 0 10px;
 }
 
+/* Fixes the positioning of the anchor because of the navbar */
+a.anchor{display: block; position: relative; top: -95px; visibility: hidden;}
 
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
@@ -143,7 +145,9 @@ body {
   letter-spacing: -1px;
 }
 
-
+.imageblock {
+    min-height: 450px;
+}
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
