--- a/local.css
+++ b/local.css
@@ -76,7 +76,9 @@ a.anchor{display: block; position: relative; top: -95px; visibility: hidden;}
 }
 
 .carousel-caption {
-  background-color: transparent;
+  /*background-color: transparent;*/
+  border-radius: 10px 10px 10px 10px;
+  background-color: rgba(0,0,0,0.5);
   position: static;
   max-width: 550px;
   padding: 0 20px;
